--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "cssnano": "^5.0.15",
+    "gsap": "^3.9.1",
     "laravel-mix": "^6.0.39",
+    "locomotive-scroll": "^4.1.4",
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.2",
     "postcss-nested": "^5.0.6",
+    "scrollmagic": "^2.0.8",
+    "scrollmagic-plugin-gsap": "^1.0.4",
     "tailwindcss": "^3.0.15"
   }
 }
