--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
     }
   ],
   "require": {
-    "php": "^8.0",
+    "php": "^8.0.2",
     "illuminate/support": "^9.0",
-    "symfony/var-dumper": "^6.0"
+    "symfony/translation": "6.0.9",
+    "symfony/translation-contracts": "3.0.2",
+    "symfony/var-dumper": "6.0.9"
   },
   "autoload": {
     "psr-4": {
