--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": "^8.0.2",
-    "illuminate/support": "^9.0",
+    "illuminate/support": "^9.0|^10.0",
     "symfony/translation": "6.0.9",
     "symfony/translation-contracts": "3.0.2",
     "symfony/var-dumper": "6.0.9"
