--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "@/*": ["resources/js/*"]
+            "@/*": ["assets/js/*"]
         }
     },
     "exclude": ["node_modules", "public"]
