--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "theme",
-  "private": true,
-  "scripts": {
-      "dev": "vite",
-      "build": "vite build"
-  },
-  "devDependencies": {
-    "@glidejs/glide": "^3.5.2",
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.4.0",
-    "@tailwindcss/line-clamp": "^0.3.1",
-    "@tailwindcss/typography": "^0.5.0",
-    "alpinejs": "^3.7.1",
-    "autoprefixer": "^10.4.2",
-    "gsap": "^3.9.1",
-    "laravel-vite-plugin": "^0.5.0",
-    "locomotive-scroll": "^4.1.4",
-    "postcss": "^8.4.5",
-    "postcss-import": "^14.0.2",
-    "postcss-nested": "^5.0.6",
-    "scrollmagic": "^2.0.8",
-    "scrollmagic-plugin-gsap": "^1.0.4",
-    "tailwindcss": "^3.0.15",
-    "vite": "^3.0.0"
-  }
+    "name": "theme",
+    "private": true,
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build"
+    },
+    "devDependencies": {
+        "@alpinejs/collapse": "^3.12.3",
+        "@alpinejs/focus": "^3.12.3",
+        "@alpinejs/morph": "^3.12.3",
+        "@alpinejs/persist": "^3.12.3",
+        "@tailwindcss/container-queries": "^0.1.1",
+        "@tailwindcss/forms": "^0.5.4",
+        "@tailwindcss/typography": "^0.5.9",
+        "alpinejs": "^3.12.3",
+        "autoprefixer": "10.4.5",
+        "focus-visible": "^5.2.0",
+        "gsap": "^3.9.1",
+        "ismobilejs": "^1.1.1",
+        "laravel-vite-plugin": "^0.8.0",
+        "motion": "^10.16.2",
+        "postcss": "^8.4.27",
+        "postcss-focus-visible": "^9.0.0",
+        "postcss-import": "^15.1.0",
+        "tailwindcss": "^3.3.3",
+        "tailwindcss-debug-screens": "^2.2.1",
+        "vite": "^4.4.9"
+    },
+    "overrides": {
+        "autoprefixer": "10.4.5"
+    }
 }
